app/components/authorShow/authorShow.scss
@import "../../variables";

.authorShowPageWrapper {
  margin-top: $navbar_height;
}

.container {
  margin: 0 auto;
  max-width: $small-container-width;
}

.rootWrapper {
  min-height: calc(100vh - #{$navbar_height} - 60px);
}

.headerBox {
  background-color: $gray0;
}

.headerFlexWrapper {
  display: flex;
  height: 172px;
  align-items: top;
  padding: 60px 16px 0 16px;
}

.headerLeftBox,
.contentLeftBox {
  display: flex;
  vertical-align: top;
  flex-direction: row;
  width: $small-container-left-container-width;
}

.headerRightBox,
.contentRightBox {
  flex: 1;
  display: inline-block;
  vertical-align: top;
  padding-left: 22px;
}

.authorName {
  font-size: 27px;
  font-weight: 500;
  color: $black0;
}

.affiliation {
  font-size: 16px;
  font-weight: 500;
  padding-top: 8px;
  color: $gray5;
}

.metadataBox {
  display: flex;
  flex-direction: row;
  margin-right: 16px;
  margin-left: auto;
}

.citationNumberBox,
.hIndexBox {
  vertical-align: top;
}

.citationNumberBox + .hIndexBox {
  margin-left: 30px;
}

.citationNumberTitle,
.hIndexTitle {
  font-size: 17px;
  font-weight: 500;
  color: $gray4;
  margin-bottom: 7px;
}

.citationNumber,
.hIndexNumber {
  font-size: 27px;
  font-weight: 500;
  color: $black0;
}

.contentFlexWrapper {
  display: flex;
  padding: 0 16px;
}

.contentLeftBox,
.contentRightBox {
  margin-top: 30px;
}

.paperListHeader {
  display: flex;
  margin-bottom: 35px;

  .paperListLeft {
    flex-grow: 1;
  }
}

.authorClaimButton {
  display: block;
  width: 184px;
  height: 40px;
  border-radius: 5px;
  border: solid 1px $gray3;
  color: $gray6;
  font-size: 14px;
  font-weight: bold;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  line-height: 22px;

  &:hover {
    cursor: pointer;
    color: $black1;
    transition: ease-in-out 0.2s;
    border: solid 1px $gray4;
  }
}

.paperListTitle,
.coAuthorListTitle {
  display: inline-block;
  vertical-align: top;
  font-size: 18px;
  font-weight: 500;
  color: $black0;
  margin-right: 8px;
}

.paperListTitleNumber,
.coAuthorListTitleNumber {
  display: inline-block;
  vertical-align: top;
  font-size: 18px;
  font-weight: 500;
  color: $gray5;
}

.coAuthorTitleBox {
  margin-bottom: 35px;
}

.authorItem {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-bottom: 6px;
  padding: 6px 8px;

  &:last-of-type {
    margin-bottom: 0;
  }

  &:hover {
    border-radius: 5px;
    background-color: $gray0;
  }
}

.coAuthorItemHeader {
  margin-bottom: 2px;
}

.coAuthorName {
  display: inline-block;
  vertical-align: top;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.19;
  color: $black1;
  margin-right: 10.5px;

  &:hover {
    text-decoration: underline;
  }
}

.coAuthorAffiliation {
  font-size: 13px;
  line-height: 1.46;
  color: $gray5;
}


@media (max-width: $small-container-width) {
  .contentRightBox {
    display: none;
  }

  .headerRightBox {
    display: none;
  }
}

@media (max-width: $small-container-left-container-width) {

  .headerFlexWrapper {
    padding: 32px 16px;
    min-height: 200px;
  }

 .headerLeftBox {
   flex-direction: column;
 }

 .metadataBox {
   margin : 32px 0px;
 }

}

